@@ -57,8 +57,8 @@ public class UpsertKvBenchmark extends AbstractMultiNodeBenchmark {
 
     @Override
     public void nodeSetUp() throws Exception {
-        System.setProperty(IgniteSystemProperties.IGNITE_SKIP_REPLICATION_IN_BENCHMARK, "true");
-        System.setProperty(IgniteSystemProperties.IGNITE_SKIP_STORAGE_UPDATE_IN_BENCHMARK, "true");
+//        System.setProperty(IgniteSystemProperties.IGNITE_SKIP_REPLICATION_IN_BENCHMARK, "true");
+//        System.setProperty(IgniteSystemProperties.IGNITE_SKIP_STORAGE_UPDATE_IN_BENCHMARK, "true");
         super.nodeSetUp();
     }
 
@@ -92,6 +92,24 @@ public class UpsertKvBenchmark extends AbstractMultiNodeBenchmark {
     public static void main(String[] args) throws RunnerException {
         Options opt = new OptionsBuilder()
                 .include(".*" + UpsertKvBenchmark.class.getSimpleName() + ".*")
+                .jvmArgsAppend(
+                        "-ea",
+//                        "-Djmh.executor=VIRTUAL",
+//                        "-Djdk.virtualThreadScheduler.parallelism=1",
+//                        "-Djdk.virtualThreadScheduler.maxPoolSize=1",
+//                        "-Djdk.virtualThreadScheduler.minRunnable=1",
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                        "--add-opens=java.base/java.io=ALL-UNNAMED",
+                        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                        "--add-opens=java.base/java.math=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util=ALL-UNNAMED",
+                        "--add-opens=java.base/java.time=ALL-UNNAMED",
+                        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                        "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.security.x509=ALL-UNNAMED")
                 .build();
 
         new Runner(opt).run();
@@ -104,6 +122,6 @@ public class UpsertKvBenchmark extends AbstractMultiNodeBenchmark {
 
     @Override
     protected int partitionCount() {
-        return 8;
+        return 1;
     }
 }
